3.5/add-ons-official.md
# Official Add-ons

In addition to our core packages (Base and CRUD), we've developed a few packages you can install or download, that treat common use cases. 


  - [PermissionManager](https://github.com/Laravel-Backpack/PermissionManager) - interface to manage users & permissions, using [spatie/laravel-permission](https://github.com/spatie/laravel-permission); ```free```
  - [Settings](https://github.com/Laravel-Backpack/Settings) - interface to edit site-wide settings; ```free```
  - [PageManager](https://github.com/Laravel-Backpack/PageManager) - interface to manage content for custom pages, using page templates; ```free```
  - [MenuCRUD](https://github.com/Laravel-Backpack/MenuCRUD) - interface to create/update/reorder menu items;  ```free```
  - [NewsCRUD](https://github.com/Laravel-Backpack/NewsCRUD) - interface to manage news articles, categories and tags; ```free```
  - [LogManager](https://github.com/Laravel-Backpack/LogManager) - interface to preview Laravel log files; ```free```
  - [BackupManager](https://github.com/Laravel-Backpack/BackupManager) - interface to backup your files & db using [spatie/laravel-backup](https://github.com/spatie/laravel-backup); ```free```


>**These add-ons only provide basic functionality.** What will be enough for _most_ projects. They do not intend to be a complete solution for all use cases. If you need to customize a package for your specific use case, you can easily do that, by copy-pasting their code in your project and modifying it. Every official package has been created with this in mind, has a very simple architecture, uses Backpack best practices. Find the "extend" section in each of their docs for more about this.