5.x/add-ons-official.md
# Official Add-ons

In addition to our core packages (CRUD and PRO), we've developed a few packages you can install or download, that treat common use cases. 

Premium add-ons (paid separately):
- [Backpack PRO](https://backpackforlaravel.com/products/pro-for-unlimited-projects) - adds 5 more operations, 10 filters, 28 more fields, 6 more columns and 1 more widget to your admin panel toolbelt; we believe it's everything you need to build admin panels... of any complexity <span class="badge badge-pill badge-warning">PAID EXTRA</span>
- [Backpack DevTools](https://backpackforlaravel.com/products/devtools) - a GUI to easily generate Migrations, Models, Seeders, Factories and CRUDs, right from your browser window; a power user's dream come true! <span class="badge badge-pill badge-warning">PAID EXTRA</span>
- [Backpack Figma Template](https://backpackforlaravel.com/products/figma-template) - quickly create designs and mockups, using Backpack's design, screens and components; empower your designers to design admin panels that are easy-to-code; <span class="badge badge-pill badge-warning">PAID EXTRA</span>
- [Backpack EditableColumns](https://backpackforlaravel.com/products/editable-columns) - let admins make quick edits, right from the table view; <span class="badge badge-pill badge-warning">PAID EXTRA</span>


Free add-ons:
  - [PermissionManager](https://github.com/Laravel-Backpack/PermissionManager) - interface to manage users & permissions, using [spatie/laravel-permission](https://github.com/spatie/laravel-permission); <span class="badge badge-pill badge-success">FREE</span>
  - [Settings](https://github.com/Laravel-Backpack/Settings) - interface to edit site-wide settings; <span class="badge badge-pill badge-success">FREE</span>
  - [PageManager](https://github.com/Laravel-Backpack/PageManager) - interface to manage content for custom pages, using page templates; <span class="badge badge-pill badge-success">FREE</span>
  - [MenuCRUD](https://github.com/Laravel-Backpack/MenuCRUD) - interface to create/update/reorder menu items;  <span class="badge badge-pill badge-success">FREE</span>
  - [NewsCRUD](https://github.com/Laravel-Backpack/NewsCRUD) - interface to manage news articles, categories and tags; <span class="badge badge-pill badge-success">FREE</span>
  - [LogManager](https://github.com/Laravel-Backpack/LogManager) - interface to preview Laravel log files; <span class="badge badge-pill badge-success">FREE</span>
  - [BackupManager](https://github.com/Laravel-Backpack/BackupManager) - interface to backup your files & db using [spatie/laravel-backup](https://github.com/spatie/laravel-backup); <span class="badge badge-pill badge-success">FREE</span>


>**The free add-ons only provide basic functionality.** What will be enough for _most_ projects. They do not intend to be a complete solution for all use cases. If you need to customize a package for your specific use case, you can easily do that, by copy-pasting their code in your project and modifying it. Every official package has been created with this in mind, has a very simple architecture, uses Backpack best practices. Find the "extend" section in each of their docs for more about this.
